name:                disguise
version:             0.1.0.0
synopsis:            Compositional UI on top of Gtk
homepage:            https://github.com/talanis85/disguise#readme
license:             BSD3
license-file:        LICENSE
author:              Philip Kranz
maintainer:          pk@pmlk.net
copyright:           2017 Philip Kranz
category:            User Interfaces
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

description:         Please see the README on Github at <https://github.com/talanis85/disguise#readme>

library
  hs-source-dirs:      src
  exposed-modules:     Graphics.Disguise.Cairo
                     , Graphics.Disguise.Cairo.Widget
                     , Graphics.Disguise.Cairo.Widget.Image
                     , Graphics.Disguise.Cairo.Widget.List
                     , Graphics.Disguise.Cairo.Widget.Meter
                     , Graphics.Disguise.Cairo.Widget.Text
                     , Graphics.Disguise.Gtk.Event
                     , Graphics.Disguise.Gtk.Main
                     , Graphics.Disguise.Interactive
                     , Graphics.Disguise.Widget
  build-depends:       base >= 4.7 && < 5
                     , array
                     , bifunctors
                     , cairo
                     , comonad
                     , free
                     , gtk3
                     , JuicyPixels
                     , ListZipper
                     , mtl
                     , pango
                     , text
                     , vector
  default-language:    Haskell2010

test-suite disguise-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , disguise
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/talanis85/disguise
