name:                pui
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/githubuser/pui#readme
license:             BSD3
license-file:        LICENSE
author:              Philip Kranz
maintainer:          philip.kranz@googlemail.com
copyright:           2017 Philip Kranz
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/githubuser/pui#readme>

library
  hs-source-dirs:      src
  exposed-modules:     Graphics.PUI.Cairo
                     , Graphics.PUI.Cairo.Widget
                     , Graphics.PUI.Cairo.Widget.Image
                     , Graphics.PUI.Cairo.Widget.List
                     , Graphics.PUI.Cairo.Widget.Meter
                     , Graphics.PUI.Cairo.Widget.Text
                     , Graphics.PUI.Gtk.Event
                     , Graphics.PUI.Gtk.Main
                     , Graphics.PUI.Interactive
                     , Graphics.PUI.Widget
  build-depends:       base >= 4.7 && < 5
                     , array
                     , bifunctors
                     , cairo
                     , comonad
                     , free
                     , gtk3
                     , JuicyPixels
                     , ListZipper
                     , mtl
                     , pango
                     , text
                     , vector
  default-language:    Haskell2010

test-suite pui-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pui
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/pui
